--- a/index.html
+++ b/index.html
@@ -5,164 +5,164 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ANİMATED CİRCLES</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="PATATROPAPP/assets/css/main.css">
-    <script src="PATATROPAPP/assets/js/paper.js"></script>
-    <script src="PATATROPAPP/assets/js/howler.core.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css">
+    <script src="assets/js/paper.js"></script>
+    <script src="assets/js/howler.core.min.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
         var keydata = {
             q: {
                 sound: new Howl({
-                 src: ["PATATROPAPP/assets/sounds/bubbles.mp3"]
+                 src: ["assets/sounds/bubbles.mp3"]
                 }),
                 color: '#1abc9c'
             },
             w: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/clay.mp3']
+                 src: ['assets/sounds/clay.mp3']
                 }),
                 color: '#2ecc71'
             },
             e: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/confetti.mp3']
+                 src: ['assets/sounds/confetti.mp3']
                 }),
                 color: '#3498db'
             },
             r: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/corona.mp3']
+                 src: ['assets/sounds/corona.mp3']
                 }),
                 color: '#9b59b6'
             },
                 t: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/dotted-spiral.mp3']
+                 src: ['assets/sounds/dotted-spiral.mp3']
                 }),
                 color: '#34495e'
             },
             y: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/flash-1.mp3']
+                 src: ['assets/sounds/flash-1.mp3']
                 }),
                 color: '#16a085'
             },
             u: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/flash-2.mp3']
+                 src: ['assets/sounds/flash-2.mp3']
                 }),
                 color: '#27ae60'
             },
             i: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/flash-3.mp3']
+                 src: ['assets/sounds/flash-3.mp3']
                 }),
                 color: '#2980b9'
             },
             o: {
                 sound: new Howl({
-                   src: ['PATATROPAPP/assets/sounds/glimmer.mp3']
+                   src: ['assets/sounds/glimmer.mp3']
                 }),
                 color: '#8e44ad'
             },
             p: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/moon.mp3']
+                 src: ['assets/sounds/moon.mp3']
                 }),
                 color: '#2c3e50'
             },
             a: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/pinwheel.mp3']
+                 src: ['assets/sounds/pinwheel.mp3']
                 }),
                 color: '#f1c40f'
             },
             s: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/piston-1.mp3']
+                 src: ['assets/sounds/piston-1.mp3']
                 }),
                 color: '#e67e22'
             },
                 d: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/piston-2.mp3']
+                 src: ['assets/sounds/piston-2.mp3']
                 }),
                 color: '#e74c3c'
             },
             f: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/prism-1.mp3']
+                 src: ['assets/sounds/prism-1.mp3']
                 }),
                 color: '#95a5a6'
             },
             g: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/prism-2.mp3']
+                 src: ['assets/sounds/prism-2.mp3']
                 }),
                 color: '#f39c12'
             },
             h: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/prism-3.mp3']
+                 src: ['assets/sounds/prism-3.mp3']
                 }),
                 color: '#d35400'
             },
             j: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/splits.mp3']
+                 src: ['assets/sounds/splits.mp3']
                 }),
                 color: '#1abc9c'
             },
             k: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/squiggle.mp3']
+                 src: ['assets/sounds/squiggle.mp3']
                 }),
                 color: '#2ecc71'
             },
             l: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/strike.mp3']
+                 src: ['assets/sounds/strike.mp3']
                 }),
                 color: '#3498db'
             },
             z: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/suspension.mp3']
+                 src: ['assets/sounds/suspension.mp3']
                 }),
                 color: '#9b59b6'
             },
             x: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/timer.mp3']
+                 src: ['assets/sounds/timer.mp3']
                 }),
                 color: '#34495e'
             },
             c: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/ufo.mp3']
+                 src: ['assets/sounds/ufo.mp3']
                 }),
                 color: '#16a085'
             },
             v: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/veil.mp3']
+                 src: ['assets/sounds/veil.mp3']
                 }),
                 color: '#27ae60'
             },
             b: {
                 sound: new Howl({
-                    src: ['PATATROPAPP/assets/sounds/wipe.mp3']
+                    src: ['assets/sounds/wipe.mp3']
                 }),
                 color: '#2980b9'
             },
             n: {
                 sound: new Howl({
-                    src: ['PATATROPAPP/assets/sounds/zig-zag.mp3']
+                    src: ['assets/sounds/zig-zag.mp3']
                 }),
                 color: '#8e44ad'
             },
             m: {
                 sound: new Howl({
-                 src: ['PATATROPAPP/assets/sounds/moon.mp3']
+                 src: ['assets/sounds/moon.mp3']
                 }),
                 color: '#2c3e50'
             }
@@ -190,7 +190,7 @@ function onKeyDown(event) {
     newcircle.fillColor="blue"
     newar.push(newcircle);
     var sound = new Howl({
-        src: ['PATATROPAPP/assets/sounds/timer.mp3']
+        src: ['assets/sounds/timer.mp3']
       });
       
       sound.play();
@@ -218,7 +218,7 @@ function onKeyDown(event) {
 
 
         <canvas id="myCanvas" resize></canvas>
-        <script src="PATATROPAPP/assets/js/paper.js"></script>
+        <script src="assets/js/paper.js"></script>
     
 </body>
 </html>
